# codeatlas

./: .gitignore  LICENSE  README.md  codeatlas.json  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: codeatlas.yml
examples/sample_repo/: README.md
examples/sample_repo/docs/: architecture.md
examples/sample_repo/scripts/: build.sh
examples/sample_repo/src/: app.py
examples/sample_repo/src/widgets/: dashboard.py  metrics.py
src/codeatlas/: __init__.py  cli.py  models.py  scanner.py  server.py
tests/: test_scanner.py
